// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Grid badge demo works fine 1`] = `
<badge>
  <t-grid
    class="t-grid badge"
  >
    <t-grid-item
      tClassContent="external-class-content"
      tClassImage="image"
      tClassText="text"
      text="标题文字"
    >
      <t-badge
        count="{{16}}"
        slot="image"
        tClass="badge-item"
      >
        <wx-image
          class="image-icon"
          src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
        />
      </t-badge>
    </t-grid-item>
    <t-grid-item
      tClassContent="external-class-content"
      tClassImage="image"
      tClassText="text"
      text="标题文字"
    >
      <t-badge
        dot="{{true}}"
        slot="image"
        tClass="badge-item"
      >
        <wx-image
          class="image-icon"
          src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
        />
      </t-badge>
    </t-grid-item>
    <t-grid-item
      tClassContent="external-class-content"
      tClassImage="image"
      tClassText="text"
      text="标题文字"
    >
      <t-badge
        count="New"
        slot="image"
        tClass="badge-item"
        tClassText="text"
      >
        <wx-image
          class="image-icon"
          src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
        />
      </t-badge>
    </t-grid-item>
    <t-grid-item
      tClassContent="external-class-content"
      tClassImage="image"
      tClassText="text"
      text="标题五字内"
    >
      <t-badge
        count="slot"
        slot="image"
        tClass="badge-item"
      >
        <wx-image
          class="image-icon"
          src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
        />
        <wx-view
          class="badge-circle"
          slot="count"
        >
          <wx-view
            class="badge-circle-container"
          >
            <wx-view
              class="circle"
            />
            <wx-view
              class="circle"
            />
            <wx-view
              class="circle"
            />
          </wx-view>
        </wx-view>
      </t-badge>
    </t-grid-item>
  </t-grid>
</badge>
`;

exports[`Grid Grid border demo works fine 1`] = `
<border>
  <t-grid
    border="{{
      Object {
        "color": "#f6f6f6",
      }
    }}"
    class="three-border"
    column="{{3}}"
  >
    <t-grid-item
      image="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      text="标题文字"
    />
    <t-grid-item
      image="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      text="标题文字"
    />
    <t-grid-item
      image="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      text="标题文字"
    />
  </t-grid>
</border>
`;

exports[`Grid Grid five demo works fine 1`] = `
<five>
  <t-grid
    class="five"
    column="{{5}}"
  >
    <t-grid-item
      tClassContent="external-class-content"
      tClassImage="image-icon"
      tClassText="text"
      text="标题文字"
    >
      <wx-image
        class="image"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
    <t-grid-item
      tClassContent="external-class-content"
      tClassImage="image-icon"
      tClassText="text"
      text="标题文字"
    >
      <wx-image
        class="image"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
    <t-grid-item
      tClassContent="external-class-content"
      tClassImage="image-icon"
      tClassText="text"
      text="标题文字"
    >
      <wx-image
        class="image"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
    <t-grid-item
      tClassContent="external-class-content"
      tClassImage="image-icon"
      tClassText="text"
      text="标题文字"
    >
      <wx-image
        class="image"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
    <t-grid-item
      tClassContent="external-class-content"
      tClassImage="image-icon"
      tClassText="text"
      text="最多四字"
    >
      <wx-image
        class="image"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
  </t-grid>
</five>
`;

exports[`Grid Grid four demo works fine 1`] = `
<four>
  <t-grid
    class="four"
  >
    <t-grid-item
      tClassContent="external-class-content"
      tClassImage="image-icon"
      tClassText="text"
      text="标题文字"
    >
      <wx-image
        class="image"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
    <t-grid-item
      tClassContent="external-class-content"
      tClassImage="image-icon"
      tClassText="text"
      text="标题文字"
    >
      <wx-image
        class="image"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
    <t-grid-item
      tClassContent="external-class-content"
      tClassImage="image-icon"
      tClassText="text"
      text="标题文字"
    >
      <wx-image
        class="image"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
    <t-grid-item
      tClassContent="external-class-content"
      tClassImage="image-icon"
      tClassText="text"
      text="标题五字内"
    >
      <wx-image
        class="image"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
  </t-grid>
</four>
`;

exports[`Grid Grid three demo works fine 1`] = `
<three>
  <t-grid
    class="three"
    column="{{3}}"
  >
    <t-grid-item
      tClassImage="image-icon"
      tClassText="text"
      text="标题文字"
    >
      <wx-image
        class="image"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
    <t-grid-item
      tClassImage="image-icon"
      tClassText="text"
      text="标题文字"
    >
      <wx-image
        class="image"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
    <t-grid-item
      tClassImage="image-icon"
      tClassText="text"
      text="标题最多六字"
    >
      <wx-image
        class="image"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
  </t-grid>
</three>
`;

exports[`Grid Grid three-des demo works fine 1`] = `
<three-des>
  <t-grid
    class="three-des"
    column="{{3}}"
  >
    <t-grid-item
      description="说明文字"
      tClassDescription="description"
      tClassImage="image"
      tClassText="text"
      text="标题文字"
    >
      <wx-image
        class="image-icon"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
    <t-grid-item
      description="说明文字"
      tClassDescription="description"
      tClassImage="image"
      tClassText="text"
      text="标题文字"
    >
      <wx-image
        class="image-icon"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
    <t-grid-item
      description="说明最多六字"
      tClassDescription="description"
      tClassImage="image"
      tClassText="text"
      text="标题最多六字"
    >
      <wx-image
        class="image-icon"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
  </t-grid>
</three-des>
`;

exports[`Grid Grid two-des demo works fine 1`] = `
<two-des>
  <t-grid
    align="left"
    column="{{2}}"
    tClass="two-des"
  >
    <t-grid-item
      description="说明文字"
      layout="horizontal"
      tClassImage="image"
      text="标题文字"
    >
      <wx-image
        class="image-icon"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
    <t-grid-item
      description="说明文字最多八字"
      layout="horizontal"
      tClassImage="image"
      text="标题最多六字"
    >
      <wx-image
        class="image-icon"
        slot="image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
    </t-grid-item>
  </t-grid>
</two-des>
`;
